; ModuleID = '/home/carl/AnghaBench/phpredis/extr_redis.c_redis_send_discard.c'
source_filename = "/home/carl/AnghaBench/phpredis/extr_redis.c_redis_send_discard.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FAILURE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"DISCARD\00", align 1
@.str.1 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"+OK\00", align 1
@SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @redis_send_discard to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @redis_send_discard(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %8 = load i32, i32* @FAILURE, align 4
  store i32 %8, i32* %3, align 4
  %9 = call i32 @REDIS_SPPRINTF(i8** %4, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.1, i64 0, i64 0))
  store i32 %9, i32* %7, align 4
  %10 = load i32*, i32** %2, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = load i32, i32* %7, align 4
  %13 = call i64 @redis_sock_write(i32* %10, i8* %11, i32 %12)
  %14 = icmp sge i64 %13, 0
  br i1 %14, label %15, label %34

15:                                               ; preds = %1
  %16 = load i32*, i32** %2, align 8
  %17 = call i8* @redis_sock_read(i32* %16, i32* %6)
  store i8* %17, i8** %5, align 8
  %18 = icmp ne i8* %17, null
  br i1 %18, label %19, label %34

19:                                               ; preds = %15
  %20 = load i32, i32* %6, align 4
  %21 = icmp eq i32 %20, 3
  br i1 %21, label %22, label %28

22:                                               ; preds = %19
  %23 = load i8*, i8** %5, align 8
  %24 = call i64 @strncmp(i8* %23, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0), i32 3)
  %25 = icmp eq i64 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %22
  %27 = load i32, i32* @SUCCESS, align 4
  br label %30

28:                                               ; preds = %22, %19
  %29 = load i32, i32* @FAILURE, align 4
  br label %30

30:                                               ; preds = %28, %26
  %31 = phi i32 [ %27, %26 ], [ %29, %28 ]
  store i32 %31, i32* %3, align 4
  %32 = load i8*, i8** %5, align 8
  %33 = call i32 @efree(i8* %32)
  br label %34

34:                                               ; preds = %30, %15, %1
  %35 = load i8*, i8** %4, align 8
  %36 = call i32 @efree(i8* %35)
  %37 = load i32, i32* %3, align 4
  ret i32 %37
}

declare dso_local i32 @REDIS_SPPRINTF(i8**, i8*, i8*) #1

declare dso_local i64 @redis_sock_write(i32*, i8*, i32) #1

declare dso_local i8* @redis_sock_read(i32*, i32*) #1

declare dso_local i64 @strncmp(i8*, i8*, i32) #1

declare dso_local i32 @efree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
